// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserComments  /> it renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <div>
    <UserComments
      comments={
        Array [
          Object {
            "authorName": "authorName",
            "body": "This is a commment!",
            "createdAt": "2018-12-12 10:20:46 UTC",
            "id": "ID",
            "slug": "Title",
          },
        ]
      }
    />
    <ArticleComment
      postComment={
        Array [
          Object {
            "authorName": "authorName",
            "body": "This is a commment!",
            "createdAt": "2018-12-12 10:20:46 UTC",
            "id": "ID",
            "slug": "Title",
          },
        ]
      }
    />
  </div>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <UserComments
          comments={
            Array [
              Object {
                "authorName": "authorName",
                "body": "This is a commment!",
                "createdAt": "2018-12-12 10:20:46 UTC",
                "id": "ID",
                "slug": "Title",
              },
            ]
          }
        />,
        <ArticleComment
          postComment={
            Array [
              Object {
                "authorName": "authorName",
                "body": "This is a commment!",
                "createdAt": "2018-12-12 10:20:46 UTC",
                "id": "ID",
                "slug": "Title",
              },
            ]
          }
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "comments": Array [
            Object {
              "authorName": "authorName",
              "body": "This is a commment!",
              "createdAt": "2018-12-12 10:20:46 UTC",
              "id": "ID",
              "slug": "Title",
            },
          ],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "postComment": Array [
            Object {
              "authorName": "authorName",
              "body": "This is a commment!",
              "createdAt": "2018-12-12 10:20:46 UTC",
              "id": "ID",
              "slug": "Title",
            },
          ],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <UserComments
            comments={
              Array [
                Object {
                  "authorName": "authorName",
                  "body": "This is a commment!",
                  "createdAt": "2018-12-12 10:20:46 UTC",
                  "id": "ID",
                  "slug": "Title",
                },
              ]
            }
          />,
          <ArticleComment
            postComment={
              Array [
                Object {
                  "authorName": "authorName",
                  "body": "This is a commment!",
                  "createdAt": "2018-12-12 10:20:46 UTC",
                  "id": "ID",
                  "slug": "Title",
                },
              ]
            }
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "comments": Array [
              Object {
                "authorName": "authorName",
                "body": "This is a commment!",
                "createdAt": "2018-12-12 10:20:46 UTC",
                "id": "ID",
                "slug": "Title",
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "postComment": Array [
              Object {
                "authorName": "authorName",
                "body": "This is a commment!",
                "createdAt": "2018-12-12 10:20:46 UTC",
                "id": "ID",
                "slug": "Title",
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<UserComments  /> should render correctly without a comment 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <UserComments
    comments={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2
          className="c-article__header"
        >
          Post a comment!
        </h2>,
        <div
          className="c-header-divider"
        />,
        <ArticleComment
          postComment={undefined}
        />,
        <h4
          className="c-user-comments__counter"
        >
          <Plural
            className={null}
            count={0}
            plural="comments"
            showCount={true}
            singular="comment"
            style={Object {}}
            zero={null}
          />
        </h4>,
      ],
      "className": "c-user-comments",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Post a comment!",
          "className": "c-article__header",
        },
        "ref": null,
        "rendered": "Post a comment!",
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "c-header-divider",
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "postComment": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Plural
            className={null}
            count={0}
            plural="comments"
            showCount={true}
            singular="comment"
            style={Object {}}
            zero={null}
          />,
          "className": "c-user-comments__counter",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "className": null,
            "count": 0,
            "plural": "comments",
            "showCount": true,
            "singular": "comment",
            "style": Object {},
            "zero": null,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "h4",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="c-article__header"
          >
            Post a comment!
          </h2>,
          <div
            className="c-header-divider"
          />,
          <ArticleComment
            postComment={undefined}
          />,
          <h4
            className="c-user-comments__counter"
          >
            <Plural
              className={null}
              count={0}
              plural="comments"
              showCount={true}
              singular="comment"
              style={Object {}}
              zero={null}
            />
          </h4>,
        ],
        "className": "c-user-comments",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Post a comment!",
            "className": "c-article__header",
          },
          "ref": null,
          "rendered": "Post a comment!",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "c-header-divider",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "postComment": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Plural
              className={null}
              count={0}
              plural="comments"
              showCount={true}
              singular="comment"
              style={Object {}}
              zero={null}
            />,
            "className": "c-user-comments__counter",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "className": null,
              "count": 0,
              "plural": "comments",
              "showCount": true,
              "singular": "comment",
              "style": Object {},
              "zero": null,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "h4",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
